# ccfc-youtube

./: .dockerignore  .gitignore  Dockerfile_code  README.md  dagster.yaml  docker-compose.yaml  pyproject.toml  setup.cfg  setup.py  workspace.yaml
app/: app.py
ccfc_yt/: client.py  exceptions.py  infer.py  processor.py
ccfc_yt_dags/: definitions.py  resources.py
dags/: definitions.py  jobs.py  resources.py  schedules.py  sensors.py
dags/assets/: fetch.py  infer.py  process.py
dags/assets/fetch/: comments.py  utils.py  videos.py
dags/assets/fetch/comments/: fetch_comments.py  utils.py
dags/assets/fetch/videos/: fetch_videos.py  utils.py
dags/assets/infer/: infer.py  utils.py  validate.py
dags/assets/process/: process.py  utils.py
data/: comments_sample.csv  sample_comments_thread.json  sample_videos_search.json
docs/: data_pipeline_details.md  source_code.md
tests/: test_youtube_client.py
