[project]
name = "ccfc_yt"
version = "0.1.0"
description = "Data pipeline project performing sentiment analysis on YouTube comments related to Coventry City FC"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "boto3",
    "dagster",
    "dagster-cloud",
    "pydantic", 
    "pytest"
]

[project.optional-dependencies]
dev = [
    "dagster-webserver"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dags.definitions"
code_location_name = "dags"

[tool.setuptools.packages.find]
exclude=["dags_tests"]
